# unifit

./: .gitignore  README.md  pyproject.toml
test/: test_fit.py
unifit/: __init__.py  distributions.py  fit.py
