[tool.poetry]
name = "unifit"
version = "0.1.0"
description = "Find the best fit among a heckload of probability distributions."
authors = ["malyvsen"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
scipy = "^1.5"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
rope = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
